@@ -144,8 +144,9 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 1.1.22
 =========================
-
-
+ - Fix for user to use the NodeHostname (when specified in the slurm.conf file)
+   to start jobs on.  
+   
 * Changes in SLURM 1.1.21
 =========================
  - BLUEGENE - Wait on a fini to make sure all threads are finished before
